--- a/12345678.html
+++ b/12345678.html
@@ -91,16 +91,14 @@
         <div class="row">
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 1 - €15,99 </h1>
-				<header class="subtext">
-                			<h1 class="subtext">
+                			<p class="subtext">
 						<ul>
 							<ol> Weekly general advise in the form of a magazine<br>
 								and a new sample every week</ol>
 							<ol> Two group meetings a month with a professional </ol> 
 							<ol> Access to the website </ol> 
 						</ul>
-					</h1>
-				</header>
+					</p>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="first"><br><img class="img-fluid" src="images/sub1.png" alt="" width="600" height="400"></header>                
@@ -117,7 +115,6 @@
         <div class="row">
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 2 - €29,99 </h1>
-				<header class="subtext">
                 			<p class="subtext">
 						<ul>
 							<ol> Weekly general advise in the form of a magazine<br>
@@ -126,8 +123,7 @@
 							<ol> Access to the website </ol> 
 							<ol> Two personalised chats with an expert per month</ol> 
 						</ul>
-					</p>
-				</header>
+				</p>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
 				<header class="first"><br><img class="img-fluid" src="images/sub2.png" alt="" width="600" height="400"></header>                
