--- a/23456789.html
+++ b/23456789.html
@@ -57,7 +57,7 @@
 							<ol>It is not mentioned in the expert page that the experts are only accessible through a subscription. </ol>
 						</ul>
 			</p>
-			<h4>From this feedback, we can conclude that we should make our website clearer. Therefore, we made our font bigger and put less imagery on the ‘comparing’ pages. We removed the 'homepage' and added the link to the logo. We decided to keep 'home' as this descibes the category the best. In addition, we added more imagery to the home page to make it more appealing. We added the subscriptions to the home page with a little summary about the costs and benefits. This way it is easier for customers to understand and find the subscriptions. We are also going to add an Instagram and Facebook icon to make our social media pages easier to find.</h4>
+			<h4>From this feedback, we can conclude that we should make our website clearer. Therefore, we made our font bigger and put less imagery on the ‘comparing’ pages. We removed the 'homepage' and added the link to the logo. We decided to keep 'home' as this descibes the category the best. In addition, we added subscribtions to the homepage. We added the subscriptions to the home page with a little summary about the costs and benefits. This way it is easier for customers to understand and find the subscriptions. We also to added the Instagram and Facebook icon to make our social media pages easier to find.</h4>
 			
 		</div>
 		</div>
