--- a/23456789.html
+++ b/23456789.html
@@ -37,7 +37,7 @@
 				For the Brand Road Map, the font Arista 2.0 Alternate Light was used. However, after having a discussion all together we figured a different font would suit better, since the original font was a bit difficult to read sometimes. Therefore, we decided to pick another font that looked similar to the original, but less complicated to make it easier to read when visiting the website. The first font we chose for the final website is Comfortaa, which is used for the body text. We want our brand to be appealing to everybody, therefore we decided to pick a font that wasn’t too round, but also not too straight. Because of this, the font isn’t feminine nor masculine which then can appeal to our whole target audience. The second font we chose was Averia Serif Libre. This font will be used for the headers. It has the same characteristics as Comfortaa; the font is not feminine nor masculine. However, the font is a bit thicker which makes it stand out more, which is suitable for the headers.</h4>
 				<h4>User testing: <br>
 				In order to test our prototype, we did 20 interviews to get feedback on our website. During these interviews we made use of our digital prototype, in order to receive a live reaction from our participants. Participants were shown the prototype and then ask to share their thoughts about it. Then they were asked what they thought was good on the website and what could be improved. We received the following feedback:</h4>
-				<p class="subtext">Pros:
+				<header class="subtext">Pros:
 					<ul>
 							<ol> The colors of the website looked good.</ol>
 							<ol> The website has a clean cut. </ol> 
@@ -46,8 +46,8 @@
 							<ol> The font looks good.</ol>
 							<ol>After testing the website with a colorblindness filter, we found out that everything is still readable. </ol>
 						</ul>
-			</p>
-			<p class="subtext">Cons:
+			</header>
+			<header class="subtext">Cons:
 					<ul>
 							<ol> The text was a bit small. </ol>
 							<ol> The second page, where you can compare the products, is a bit messy because of all the images, which makes it unclear.  </ol> 
@@ -56,7 +56,7 @@
 							<ol> It is unclear that the subscriptions cost money. </ol>
 							<ol>It is not mentioned in the expert page that the experts are only accessible through a subscription. </ol>
 						</ul>
-			</p>
+			</header>
 			<h4>From this feedback, we can conclude that we should make our website clearer. Therefore, we made our font bigger and put less imagery on the ‘comparing’ pages. We removed the 'homepage' and added the link to the logo. We decided to keep 'home' as this descibes the category the best. In addition, we added subscribtions to the homepage. We added the subscriptions to the home page with a little summary about the costs and benefits. This way it is easier for customers to understand and find the subscriptions. We also to added the Instagram and Facebook icon to make our social media pages easier to find.</h4>
 			
 		</div>
