--- a/12345678.html
+++ b/12345678.html
@@ -92,12 +92,12 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 1 - €15,99 </h1>
 				<header class="subtext">              
-						<ul>
-							<ol> Weekly general advise in the form of a magazine<br>
-								and a new sample every week</ol>
-							<ol> Two group meetings a month with a professional </ol> 
-							<ol> Access to the website </ol> 
-						</ul>
+						<ol>
+							<ul> Weekly general advise in the form of a magazine<br>
+								and a new sample every week</ul>
+							<ul> Two group meetings a month with a professional </ul> 
+							<ul> Access to the website </ul> 
+						</ol>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
@@ -116,13 +116,13 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 2 - €29,99 </h1>
                 			<header class="subtext">  
-						<ul>
-							<ol> Weekly general advise in the form of a magazine<br>
-								and a new sample every week</ol>
-							<ol> Two group meetings a month with a professional </ol> 
-							<ol> Access to the website </ol> 
-							<ol> Two personalised chats with an expert per month</ol> 
-						</ul>
+						<ol>
+							<ul> Weekly general advise in the form of a magazine<br>
+								and a new sample every week</ul>
+							<ul> Two group meetings a month with a professional </ul> 
+							<ul> Access to the website </ul> 
+							<ul> Two personalised chats with an expert per month</ul> 
+						</ol>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
