--- a/1234567.html
+++ b/1234567.html
@@ -71,7 +71,8 @@
         <div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-12">
 				<h3> Cosmetics </h3> 
-				<h4> There are a lot of toxins in cosmetics, washing off the day’s make up every night means that chemicals end up in the oceans and lakes. Due to that a lot of aquatic life is suffering and that needs to be changed. Sustainable cosmetics mean that it is made with natural and organic ingredients that are free from chemicals and don’t affect the planet. Also, the packaging should be recyclable.</h4>
+				<h4> There are a lot of toxins in cosmetics, washing off the day’s make up every night means that chemicals end up in the oceans and lakes. Due to that a lot of aquatic life is suffering and that needs to be changed. Sustainable cosmetics mean that it is made with natural and organic ingredients that are free from chemicals and don’t affect the planet. Also, the packaging should be recyclable. 
+				Choose here your perfect homeware with your chosen budget!</h4>
 			</div>
 		</div>
 		</div>
