--- a/12345678.html
+++ b/12345678.html
@@ -92,7 +92,7 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 1 - €15,99 </h1>
 				<header class="subtext">              
-							<ul> Weekly general advise in the form of a magazine<br>
+							<ul> Weekly general advise in the form of a magazine
 								and a new sample every week</ul>
 							<ul> Two group meetings a month with a professional </ul> 
 							<ul> Access to the website </ul> 
@@ -114,7 +114,7 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 2 - €29,99 </h1>
                 			<header class="subtext">  
-							<ul> Weekly general advise in the form of a magazine<br>
+							<ul> Weekly general advise in the form of a magazine
 								and a new sample every week</ul>
 							<ul> Two group meetings a month with a professional </ul> 
 							<ul> Access to the website </ul> 
