--- a/12345678.html
+++ b/12345678.html
@@ -92,10 +92,10 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 1 - €15,99 </h1>
 				<header class="subtext">              
-							<ol> Weekly general advise in the form of a magazine
-								and a new sample every week</ol>
-							<ol> Two group meetings a month with a professional </ol> 
-							<ol> Access to the website </ol> 
+							Weekly general advise in the form of a magazine
+					and a new sample every week<br>
+							Two group meetings a month with a professional<br>
+							Access to the website <br>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
@@ -114,11 +114,11 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title"> Subscription 2 - €29,99 </h1>
                 			<header class="subtext">  
-							<ol> Weekly general advise in the form of a magazine
-								and a new sample every week</ol>
-							<ol> Two group meetings a month with a professional </ol> 
-							<ol> Access to the website </ol> 
-							<ol> Two personalised chats with an expert per month</ol>
+							Weekly general advise in the form of a magazine
+								and a new sample every week <br>
+							Two group meetings a month with a professional <br>
+							Access to the website <br>
+							Two personalised chats with an expert per month </br>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
