--- a/12345678.html
+++ b/12345678.html
@@ -118,7 +118,7 @@
 								and a new sample every week <br>
 							Two group meetings a month with a professional <br>
 							Access to the website <br>
-							Two personalised chats with an expert per month </br>
+							Two personalised chats with an expert per month <br>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
