--- a/123456789.html
+++ b/123456789.html
@@ -80,12 +80,10 @@
 				<h1 class="title">Find us</h1>
 				<header class="subtext">
               				<h1 class="subtext">
-						<ul> 
-							<ol>Adress: Monseigneur Hopmansstraat 2, 4817 JS Breda</ol>
-							<ol>Phone: 1234-6773856</ol>
-							<ol>Find our 
-			<a href="23456789.html" target="_blank">Jusification Document</a> here</ol>
-						</ul>
+							Adress: Monseigneur Hopmansstraat 2, 4817 JS Breda<br>
+							Phone: 1234-6773856<br>
+							Find our 
+			<a href="23456789.html" target="_blank">Jusification Document</a> here
 					</h1>
 				</header>
             </div>
