--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 				<h1 class="title">Our Experts</h1>
 				<header class="subtext">
-                <h1 class="subtext">You want to live more environmental friendly, but you don’t know how? No worries, we have experts ready to help you make your life as sustainable as possible. For the mere price of €15.99  per month you receive personal advise to make your life more sustainable. <a href="12345678.html" target="_blank">Check out our experts and subscriptions!</a></h1>
+                <h1 class="subtext">You want to live more environmentalally friendly, but you don’t know how? No worries, we have experts ready to help you make your life as sustainable as possible. For the mere price of €15.99  per month you receive personal advise to make your life more sustainable. <a href="12345678.html" target="_blank">Check out our experts and subscriptions!</a></h1>
 				</header>
             </div>
             <div class="col-sm-12 col-md-4 col-lg-4">
