--- a/12345.html
+++ b/12345.html
@@ -117,7 +117,7 @@
 				<h3> €50+ </h3>
 				<a href="https://kotn.com/collections/womens-bottoms" target="_blank"> <img class="img-fluid" src="images/jeans3.png" alt="" width="400" height="200"> </a>
 				<h5>KOTN</h5>
-				<h4> Designed in Canada, ethically and sustainably made in the Nile Delta. Shop quality basics from 100% Egyptian cotton. Every purchase funds new schools 
+				<h4> Designed in Canada, ethically and sustainably made in the Nile Delta. Shop quality basics from 100% Egyptian cotton. Every purchase funds new schools. 
 				</h4>
 			</article>
 			</div>
@@ -143,7 +143,7 @@
 				<h3> €5-€25</h3>
 				<a href="https://wearpact.com/women/apparel/dresses%20&%20skirts" target="_blank"> <img class="img-fluid" src="images/dress1.png" alt="" width="500" height="150"> </a>
 				<h5> Pact </h5>
-				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. in addition all the cotton is organic </h4>
+				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. In addition, all the cotton is organic. </h4>
 			</article>
 			</div>		
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -151,7 +151,7 @@
 				<h3>€25-€50 </h3>
 				<a href="https://tentree.co.uk/collections/womens-dresses-rompers" target="_blank"> <img class="img-fluid" src="images/dress2.png" alt="" width="500" height="150"> </a>
 				<h5> Tentree </h5> 
-				<h4> With tentree, every purchase which is made they plant 10 trees. By planting trees for every purchase, they're making a big change accessible to everybody and showing the lasting impact that one small choice can have </h4>
+				<h4> With tentree, every purchase which is made they plant 10 trees. By planting trees for every purchase, they're making a big change accessible to everybody and showing the lasting impact that one small choice can have. </h4>
 			</article>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -195,7 +195,7 @@
 				<h3> €25-€50</h3>
 				<a href="https://wearpact.com/women/apparel/tops%20&%20shirts " target="_blank"> <img class="img-fluid" src="images/shirt2.png" alt="" width="400" height="200"> </a>
 				<h5> Pact </h5>
-				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. in addition all the cotton is organic 
+				<h4> Pacts partners with Fair Trade Certified™ factories because they ensure care for both people and planet. Fair Trade factories provide safe working conditions, empower and uplift local communities, and protect the environment. In addition, all the cotton is organic. 
 				</h4>
 			</article>
 			</div>
