grammar and dots

--- a/123456.html
+++ b/123456.html
@@ -100,7 +100,7 @@
 				<h3>€25-€50</h3>
 				<a href="https://www.newly.com/collections/glassware" target="_blank"> <img class="img-fluid" src="images/table2.png" alt="" width="300" height="600"> </a>
 				<h5>Newly</h5>
-				<h4>Newly makes beautiful home goods from 100% recycled or repurposed materials.We believed that if we could create a company that 1) makes beautiful home goods, and 2) makes them from 100% recycled or repurposed materials then we would be doing something special</h4>
+				<h4>Newly makes beautiful home goods from 100% recycled or repurposed materials.We believed that if we could create a company that 1) makes beautiful home goods, and 2) makes them from 100% recycled or repurposed materials then we would be doing something special. </h4>
 				</article>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -150,7 +150,7 @@ We make our pots with dynamic, iron-rich clays dug from the American South East 
 				<h3> €50 + </h3>
 				<a href="https://shoppurhome.com" target="_blank"> <img class="img-fluid" src="images/clean3.png" alt="" width="500" height="150"> </a>
 				<h5> Pur Home </h5> 
-				<h4>PUR Home is dedicated to creating products that do not cause harm to Mother Earth. We respectfully have chosen only those ingredients that cause the least harm to her. Our liquid laundry detergent packaging is biodegradable and can be composted. All of our bottles are recyclable and we will continue to educate consumers about recycling and other uses for containers, thus reducing waste</h4> 
+				<h4>PUR Home is dedicated to creating products that do not cause harm to Mother Earth. We respectfully have chosen only those ingredients that cause the least harm to her. All of our bottles are recyclable and we will continue to educate consumers about recycling and other uses for containers, thus reducing waste. </h4> 
 			</article>
 			</div>
 		</div>
@@ -177,7 +177,7 @@ We make our pots with dynamic, iron-rich clays dug from the American South East 
 				<h3>€5-€25</h3>
 				<a href="https://www.etsy.com/market/reclaimed_furniture?awc=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&zanpid=9208_1616947189_c3b0320e12265e5f504a21b8fd7ada73&utm_medium=affiliate&utm_source=affiliate_window&utm_campaign=nl_buyer&utm_content=136348&utm_term=89179" target="_blank"> <img class="img-fluid" src="images/home1.png" alt="" width="400" height="200"> </a>
 				<h5>Etsy</h5> 
-				<h4> Etsy is a global online marketplace, where poeple come together to make,sell,buy and collect unique items. there are also a lot of sustainable products in their collection and good for the environment.</h4>
+				<h4> Etsy is a global online marketplace, where poeple come together to make,sell,buy and collect unique items. There are also a lot of sustainable products in their collection and good for the environment.</h4>
 			</article>
 			</div>		
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -193,7 +193,7 @@ We make our pots with dynamic, iron-rich clays dug from the American South East 
 				<h3> €50 +</h3>
 				<a href="https://www.avocadogreenmattress.com/collections/furniture?irclickid=T-5VTEU6HxyLTjL0M-0V7wD0UkEXGfx0CRF%3ASE0&irgwc=1&utm_medium=affiliate&utm_source=impact&utm_campaign=1810803&ar_clx=yes&ar_channel=impact&ar_campaign=affiliate&ar_adgroup=%7Bpublisher_id%7D&ar_ad=%7Bad_id%7D&ar_strategy=aff" target="_blank"> <img class="img-fluid" src="images/home3.png" alt="" width="400" height="200"> </a>
 				<h5> Avocado </h5>
-				<h4>Avocado Green Mattresses are designed in Hoboken and handmade in sunny California, in our own factory, with only the finest certified organic, natural, and non-toxic materials. Our mission is to be the most respected source for organic and natural mattresses, pillows, and bedding at affordable prices  to help safeguard your health and protect our planet.</h4>
+				<h4>Avocado Green Mattresses are designed in Hoboken and handmade in sunny California, in our own factory, with only the finest certified organic, natural, and non-toxic materials. Our mission is to be the most respected source for organic and natural mattresses, pillows, and bedding at affordable prices to help protect our planet.</h4>
 			</article>
 			</div>
 		</div>
