--- a/1234567.html
+++ b/1234567.html
@@ -139,7 +139,7 @@
 				<h3> €5-€25</h3>
 				<a href="https://nl.lush.com/products/gezichtsreinigers-en-scrubs " target="_blank"> <img class="img-fluid" src="images/skin1.png" alt="" width="500" height="150"> </a>
 				<h5> Lush </h5>
-				<h4>For more than 20 years, LUSH has been creating fresh handmade cosmetics for customers all over the world in a sustainable way. When packaging is unavoidable, we prefer to use recycled materials. 90%, by weight, of our packaging material is recycled and we're working on the remaining 10%. We would like to report on our environmental performance on a yearly basis and make sure we maintain green issues alive in the hearts of our staff, ensuring that this policy delivers on what it promises.</h4>
+				<h4>For more than 20 years, LUSH has been creating fresh handmade cosmetics for customers all over the world in a sustainable way. 90%, by weight, of our packaging material is recycled and we're working on the remaining 10%. We would like to report on our environmental performance on a yearly basis and make sure we maintain green issues alive in the hearts of our staff, ensuring that this policy delivers on what it promises.</h4>
 			</article>
 			</div>		
 			<div class="col-sm-12 col-md-4 col-lg-4">
@@ -182,7 +182,7 @@
 				<h3>€5-€25</h3>
 				<a href="https://www.lovebeautyandplanet.com/nl/home.html?gclsrc=aw.ds&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgZtVwwFQkc5NX1v2qfnSmfGWwWk6URbTIS1yZjiDXYr_7e3cZiiOhBoCu50QAvD_BwE&gclid=CjwKCAjwr_uCBhAFEiwAX8YJgZtVwwFQkc5NX1v2qfnSmfGWwWk6URbTIS1yZjiDXYr_7e3cZiiOhBoCu50QAvD_BwE " target="_blank"> <img class="img-fluid" src="images/hair1.png" alt="" width="400" height="200"> </a>
 				<h5>Love Beauty and Planet </h5> 
-				<h4>Love Beauty and Planet was started by a group of like-minded people who believe that looking good and doing good should go hand-in-hand. We are obsessed with fantastic beauty products, those that we would love to use ourselves too. That’s why we started with one simple goal: whatever we do must be good for beauty and give a little love to the planet</h4>
+				<h4>Love Beauty and Planet was started by a group of like-minded people who believe that looking good and doing good should go hand-in-hand. We are obsessed with fantastic beauty products, those that we would love to use ourselves too. That’s why we started with one simple goal: whatever we do must be good for beauty and give a little love to the planet. </h4>
 			</article>
 			</div>		
 			<div class="col-md-4 col-lg-4">
@@ -190,7 +190,7 @@
 				<h3> €25-€50</h3>
 				<a href="https://www.soapdaze.com " target="_blank"> <img class="img-fluid" src="images/hair2.png" alt="" width="400" height="200"> </a>
 				<h5> Soap Daze </h5>
-				<h4> Soap Daze is a Natural, eco-friendly, vegan soap made with nourishing essential oils and natural butters. Made to be gentle on the skin whilst creating a creamy lather and smelling delicious. Also doesn't go all gooey in your soap dish. Also, their skincare that's gentle on your skin and the environment. Made with quality plant based oils, and botanical ingredients which is sustainable and good for our planet. </h4>
+				<h4> Soap Daze is a Natural, eco-friendly, vegan soap made with nourishing essential oils and natural butters. Made to be gentle on the skin whilst creating a creamy lather and smelling delicious. Also, their skincare that's gentle on your skin and the environment. Made with quality plant based oils, and botanical ingredients which is sustainable and good for our planet. </h4>
 			</article>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
