--- a/12345678.html
+++ b/12345678.html
@@ -152,7 +152,7 @@
 							
 				<h3>Olivia Red</h3>
 				<a class="first"><img class="img-fluid" src="images/expert2.png" alt="" width="500" height="300"></a>
-				<p class="subtext"> Olivia Rhodes Palmer is a 28-year-old professional sustainability advisor who enjoys listening to music and camping. She is energetic and inspiring, and excited to help you out!
+				<p class="subtext"> Olivia Red Palmer is a 28-year-old professional sustainability advisor who enjoys listening to music and camping. She is energetic and inspiring, and excited to help you out!
 				</p>
             </div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
